DLL injection, DLLInjection-by-CodeInjection, Code Injection
프로그램이 64bit이면 포인터도 64bit이고, 이때문에 Thread Return Code로 HMODULE를 완전히 반환할 수가 없음. 이때문에 LoadLibrary는 가능하나, FreeLibrary가 불가능.
이를 해결할 방안으로는 매우 다양한 방법이 존재하겠으나, Code Injection 코드 안에 들어갈 정도로 작고 간단한 방법은 없음. 굳이 따지자면 NamedPipe 정도?

--- a/SimpleSyringe.Injectio/SimpleSyringe.Injectio.vcxproj
+++ b/SimpleSyringe.Injectio/SimpleSyringe.Injectio.vcxproj
@@ -74,7 +74,7 @@
     <OutDir>$(SolutionDir)$(Configuration)\$(PlatformTarget)</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)$(Configuration)\$(PlatformTarget)</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\1</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
