--- a/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj
+++ b/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)$(Configuration)\$(PlatformTarget)</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\1</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\$(PlatformTarget)</OutDir>
