Both basic dll-injection and code-injection driven dll-injection working

--- a/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj
+++ b/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="DLLInjectionWithCodeInjection.cpp" />
     <ClCompile Include="includes.h" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ReflectiveDLLInjection.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +147,7 @@
     <ClInclude Include="CallInjectedFunc.h" />
     <ClInclude Include="CodeInjection.h" />
     <ClInclude Include="DLLInjectionWithCodeInjection.h" />
+    <ClInclude Include="ReflectiveDLLInjection.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
