--- a/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj.filters
+++ b/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="ReflectiveDLLInjection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReflectiveLoadLibrary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ReflectiveGetProcAddress.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CodeInjection.h">
@@ -57,6 +63,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReflectiveDLLInjection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReflectiveLoadLibrary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReflectiveGetProcAddress.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
