--- a/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj.filters
+++ b/SimpleSyringe.Syringe/SimpleSyringe.Syringe.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ReflectiveLoaderDefs.h">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GetProcAddressSilent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CodeInjection.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReflectiveGetProcAddress.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GetProcAddressSilent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
